--- a/css/main.css
+++ b/css/main.css
@@ -1,275 +1,6 @@
-/*COMMON*/
-body {
-  font-family: 'Nanum Gothic', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.4;
-  color: #333;
-}
-a {
-  text-decoration: none;
-}
-img {
-  /* img(인라인 요소) 하단에 Baseline 공백을 제거 */
-  display: block;
-}
-
-/*INNER*/
-.inner {
-  width: 1100px;
-  margin: 0 auto;
-  position: relative;
-}
-
-/*BUTTON*/
-.btn {
-  width: 130px;
-  padding: 10px;
-  border: 2px solid #333;
-  border-radius: 4px;
-  color: #333;
-  font-size: 16px;
-  font-weight: 700;
-  text-align: center;
-  cursor: pointer;
-  box-sizing: border-box;
-  display: block;
-  transition: .4s;
-}
-.btn:hover {
-  background-color: #333;
-  color: #FFF;
-}
-.btn.btn--reverse {
-  background-color: #333;
-  color: #FFF;
-}
-.btn.btn--reverse:hover {
-  background-color: transparent;
-  color: #333;
-}
-.btn.btn--brown {
-  color: #592B18;
-  border-color: #592B18;
-}
-.btn.btn--brown:hover {
-  color: #FFF;
-  background-color: #592B18;
-}
-.btn.btn--gold {
-  color: #D9AA8A;
-  border-color: #D9AA8A;
-}
-.btn.btn--gold:hover {
-  color: #FFF;
-  background-color: #D9AA8A;
-}
-.btn.btn--white {
-  color: #FFF;
-  border-color: #FFF;
-}
-.btn.btn--white:hover {
-  color: #333;
-  background-color: #FFF;
-}
-
-/*BACK TO POSITION*/
-.back-to-position {
-  opacity: 0;
-  transition: 1s;
-}
-.back-to-position.to-right {
-  transform: translateX(-150px);
-}
-.back-to-position.to-left {
-  transform: translateX(150px);
-}
-.show .back-to-position {
-  opacity: 1;
-  transform: translateX(0);
-}
-.show .back-to-position.delay-0 {
-  transition-delay: 0s;
-}
-.show .back-to-position.delay-1 {
-  transition-delay: .3s;
-}
-.show .back-to-position.delay-2 {
-  transition-delay: .6s;
-}
-.show .back-to-position.delay-3 {
-  transition-delay: .9s;
-}
-
-
-/*HEADER*/
-header {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 9;
-  background-color: #F6F5F0;
-  border-bottom: 1px solid #c8c8c8;
-}
-header > .inner {
-  height: 120px;
-}
-header .logo {
-  height: 75px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-}
-header .sub-menu {
-  position: absolute;
-  top: 10px;
-  right: 0;
-  display: flex;
-}
-header .sub-menu ul.menu {
-  font-family: Arial, sans-serif;
-  display: flex;
-}
-header .sub-menu ul.menu li {
-  position: relative;
-}
-header .sub-menu ul.menu li::before {
-  content: "";
-  width: 1px;
-  height: 12px;
-  background-color: #e5e5e5;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-}
-header .sub-menu ul.menu li:first-child::before {
-  display: none;
-}
-header .sub-menu ul.menu li a {
-  padding: 11px 16px;
-  display: block;
-  font-size: 13px;
-  color: #656565;
-}
-header .sub-menu ul.menu li a:hover {
-  color: #000;
-}
-header .sub-menu .search {
-  position: relative;
-  height: 34px;
-}
-header .sub-menu .search input {
-  width: 36px;
-  height: inherit;
-  padding: 4px 10px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  border-radius: 5px;
-  outline: none;
-  background-color: #fff;
-  color: #777;
-  font-size: 12px;
-  transition: width .4s;
-}
-header .sub-menu .search input:focus {
-  width: 190px;
-  border-color: #669900;
-}
-header .sub-menu .search .material-icons {
-  height: 24px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 5px;
-  margin: auto;
-  transition: .4s;
-}
-header .sub-menu .search.focused .material-icons {
-  opacity: 0;
-}
-header .main-menu {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-  display: flex;
-}
-header .main-menu .item .item__name {
-  padding: 10px 20px 34px 20px;
-  font-family: Arial, sans-serif;
-  font-size: 13px;
-}
-header .main-menu .item:hover .item__name {
-  background-color: #2C2A29;
-  color: #669900;
-  border-radius: 6px 6px 0 0;
-}
-header .main-menu .item .item__contents {
-  width: 100%;
-  position: fixed;
-  left: 0;
-  display: none;
-}
-header .main-menu .item:hover .item__contents {
-  display: block;
-}
-header .main-menu .item .item__contents .contents__menu {
-  background-color: #2C2A29;
-}
-header .main-menu .item .item__contents .contents__menu > ul {
-  padding: 20px 0;
-  display: flex;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li {
-  width: 220px;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li h4 {
-  padding: 3px 0 12px 0;
-  font-size: 14px;
-  color: #fff;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li ul li {
-  padding: 5px 0;
-  font-size: 12px;
-  color: #999;
-  cursor: pointer;
-}
-header .main-menu .item .item__contents .contents__menu > ul > li ul li:hover {
-  color: #669900;
-}
-header .main-menu .item .item__contents .contents__texture {
-  padding: 26px 0;
-  font-size: 12px;
-  background-image: url("../images/main_menu_pattern.jpg");
-}
-header .main-menu .item .item__contents .contents__texture h4 {
-  color: #999;
-  font-weight: 900;
-}
-header .main-menu .item .item__contents .contents__texture p {
-  color: #64a70b;
-  margin: 4px 0 14px;
-}
-/*BADGES*/
-header .badges {
-  position: absolute;
-  top: 132px;
-  right: 12px;
-}
-header .badges .badge {
-  border-radius: 10px;
-  overflow: hidden;
-  margin-bottom: 12px;
-  box-shadow: 4px 4px 10px rgba(0,0,0,.15);
-  cursor: pointer;
-}
-
-
-/*VISUAL*/
+/* VISUAL //////////////////////////////////////// */
 .visual {
+  /* inner height */
   margin-top: 120px;
   background-image: url("../images/visual_bg.jpg");
   background-position: center;
@@ -316,31 +47,30 @@ header .badges .badge {
   opacity: 0;
 }
 
-
-/*NOTICE*/
-/*NOTICE LINE*/
+.notice {
+}
 .notice .notice-line {
   position: relative;
 }
 .notice .notice-line .bg-left {
-  width: 50%;
-  height: 100%;
-  background-color: #333;
   position: absolute;
   top: 0;
   left: 0;
-}
-.notice .notice-line .bg-right {
   width: 50%;
   height: 100%;
-  background-color: #f6f5ef;
+  background-color: #333;
+}
+.notice .notice-line .bg-right {
   position: absolute;
   top: 0;
   right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #f6f5ef;
 }
 .notice .notice-line .inner {
+  /* 여기서 지정하면 notice-line 전체 높이가 조절됨 ***************  */
   height: 62px;
-  z-index: 1;
   display: flex;
 }
 .notice .notice-line .inner__left {
@@ -348,20 +78,19 @@ header .badges .badge {
   height: 100%;
   background-color: #333;
   display: flex;
-  align-items: center;
 }
 .notice .notice-line .inner__left h2 {
   color: #fff;
   font-size: 17px;
   font-weight: 700;
   margin-right: 20px;
+  display: flex;
+  align-items: center;
 }
-.notice .notice-line .inner__left .swiper-container {
-  height: 62px;
+.notice .notice-line .inner__left .swiper {
   flex-grow: 1;
 }
 .notice .notice-line .inner__left .swiper-slide {
-  height: 62px;
   display: flex;
   align-items: center;
 }
@@ -370,12 +99,12 @@ header .badges .badge {
 }
 .notice .notice-line .inner__left .notice-line__more {
   width: 62px;
-  height: 62px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .notice .notice-line .inner__left .notice-line__more .material-icons {
+  /* 아이콘 크기는 글자 크기로 변경 */
   color: #fff;
   font-size: 30px;
 }
@@ -392,7 +121,6 @@ header .badges .badge {
 }
 .notice .notice-line .inner__right .toggle-promotion {
   width: 62px;
-  height: 62px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -401,37 +129,35 @@ header .badges .badge {
 .notice .notice-line .inner__right .toggle-promotion .material-icons {
   font-size: 30px;
 }
-/*PROMOTION*/
 .notice .promotion {
-  /*width: auto;*/
   height: 693px;
   background-color: #f6f5ef;
   position: relative;
+  transition: height 0.4s;
   overflow: hidden;
-  transition: height .4s;
 }
 .notice .promotion.hide {
   height: 0;
 }
-.notice .promotion .swiper-container {
-  /* 819px 슬라이드 3개와 그 사이 여백 10px씩 = 2477px */
+.notice .promotion .swiper {
   width: calc(819px * 3 + 20px);
+  /* width: 2477px; */
   height: 553px;
   position: absolute;
   top: 40px;
   left: 50%;
   margin-left: calc((819px * 3 + 20px) / -2);
+  /* margin-left: -1238.5px; */
 }
 .notice .promotion .swiper-slide {
-  position: relative;
-  opacity: .5;
+  opacity: 0.5;
   transition: opacity 1s;
+  position: relative;
 }
 .notice .promotion .swiper-slide-active {
   opacity: 1;
 }
 .notice .promotion .swiper-slide .btn {
-  /*width: 130px;*/
   position: absolute;
   bottom: 0;
   left: 0;
@@ -442,12 +168,11 @@ header .badges .badge {
   bottom: 40px;
   left: 0;
   right: 0;
-  z-index: 0;
 }
 .notice .promotion .swiper-pagination .swiper-pagination-bullet {
   background-color: transparent;
   background-image: url("../images/promotion_slide_pager.png");
-  width: 13px;
+  width: 12px;
   height: 12px;
   margin-right: 6px;
   outline: none;
@@ -462,19 +187,17 @@ header .badges .badge {
 .notice .promotion .swiper-next {
   width: 42px;
   height: 42px;
-  outline: none;
   border: 2px solid #333;
   border-radius: 50%;
   position: absolute;
-  /* Swiper Container 높이의 절반만큼 끌어올림 */
-  /* 버튼 높이의 절반만큼 추가로 끌어올림 */
   top: 300px;
   z-index: 1;
   cursor: pointer;
+  outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: .4s;
+  transition: 0.4s;
 }
 .notice .promotion .swiper-prev {
   left: 50%;
@@ -490,8 +213,7 @@ header .badges .badge {
   color: #fff;
 }
 
-
-/*REWARDS*/
+/* REWARDS */
 .rewards {
   position: relative;
 }
@@ -517,14 +239,13 @@ header .badges .badge {
 }
 .rewards .btn-group {
   position: absolute;
-  right: 0;
   bottom: 24px;
+  right: 0;
   width: 250px;
   display: flex;
   flex-wrap: wrap;
 }
 .rewards .btn-group .btn.sign-up {
-  /*width: 130px;*/
   margin-right: 10px;
 }
 .rewards .btn-group .btn.sign-in {
@@ -532,11 +253,10 @@ header .badges .badge {
 }
 .rewards .btn-group .btn.gift {
   margin-top: 10px;
-  flex: 1;
+  flex-grow: 1;
 }
 
-
-/*YOUTUBE VIDEO*/
+/* YOUTUBE VIDEO */
 .youtube {
   position: relative;
   height: 700px;
@@ -545,40 +265,38 @@ header .badges .badge {
 }
 .youtube .youtube__area {
   width: 1920px;
+  background-color: orange;
   position: absolute;
-  /* 16비율 */
+  top: 50%;
   left: 50%;
   margin-left: calc(1920px / -2);
-  /* 9비율 */
-  top: 50%;
   margin-top: calc(1920px * 9 / 16 / -2);
 }
 .youtube .youtube__area::before {
   content: "";
   display: block;
-  /* 16:9 영상 비율로 요소 크기 만들기! */
   width: 100%;
   height: 0;
   padding-top: 56.25%;
 }
 .youtube .youtube__cover {
+  background-image: url("../images/video_cover_pattern.png");
+  background-color: rgba(0, 0, 0, 0.3);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.3);
-  background-image: url("../images/video_cover_pattern.png");
 }
 #player {
   width: 100%;
   height: 100%;
-  position: absolute;
   top: 0;
   left: 0;
+  position: absolute;
 }
 .youtube .inner {
-  height: inherit;
+  height: 700px;
 }
 .youtube .floating1 {
   position: absolute;
@@ -588,11 +306,10 @@ header .badges .badge {
 .youtube .floating2 {
   position: absolute;
   top: 350px;
-  left: 150px;
+  left: 150;
 }
 
-
-/*SEASON PRODUCT*/
+/* SEASON PRODUCT */
 .season-product {
   background-image: url("../images/season_product_bg.jpg");
 }
@@ -615,9 +332,10 @@ header .badges .badge {
 .season-product .text-group .description {
   margin-bottom: 15px;
 }
+.season-product .text-group .more {
+}
 
-
-/*RESERVE COFFEE*/
+/* RESERVCE COFFEE */
 .reserve-coffee {
   background-image: url("../images/reserve_bg.jpg");
 }
@@ -640,8 +358,7 @@ header .badges .badge {
   right: 0;
 }
 
-
-/*PICK YOUR FAVORITE*/
+/* PICK YOUR FAVORITE */
 .pick-your-favorite {
   background-image: url("../images/favorite_bg.jpg");
   background-repeat: no-repeat;
@@ -654,10 +371,9 @@ header .badges .badge {
 }
 .pick-your-favorite .text-group {
   width: 362px;
-  margin-left: 100px;
   display: flex;
-  justify-content: flex-end;
   flex-wrap: wrap;
+  justify-content: flex-end;
 }
 .pick-your-favorite .text-group .title {
   margin-bottom: 40px;
@@ -666,8 +382,7 @@ header .badges .badge {
   margin-bottom: 40px;
 }
 
-
-/*RESERVE STORE*/
+/* RESERVE STORE */
 .reserve-store {
   background-image: url("../images/reserve_store_bg.jpg");
   background-repeat: no-repeat;
@@ -688,11 +403,11 @@ header .badges .badge {
 }
 .reserve-store .medal .front,
 .reserve-store .medal .back {
-  width: inherit;
-  height: inherit;
-  position: absolute;
-  transition: 1s;
+  width: 334px;
+  height: 334px;
   backface-visibility: hidden;
+  transition: 1s;
+  position: absolute;
 }
 .reserve-store .medal .front {
   transform: rotateY(0deg);
@@ -714,8 +429,7 @@ header .badges .badge {
   margin: auto;
 }
 
-
-/*FIND STORE*/
+/* FIND STORE */
 .find-store {
   background-image: url("../images/find_store_bg.jpg");
 }
@@ -734,7 +448,7 @@ header .badges .badge {
 }
 .find-store .picture {
   border-radius: 50%;
-  box-shadow: 2px 2px 8px 0 rgba(0,0,0,.5);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
   position: absolute;
 }
 .find-store .picture1 {
@@ -757,15 +471,14 @@ header .badges .badge {
   margin-bottom: 20px;
 }
 
-
-/*AWARDS*/
+/* AWARDS */
 .awards {
   background-color: #272727;
 }
 .awards .inner {
   padding: 40px 0;
 }
-.awards .swiper-container {
+.awards .swiper {
   width: 100%;
   height: 40px;
 }
@@ -773,20 +486,19 @@ header .badges .badge {
 .awards .swiper-next {
   width: 42px;
   height: 42px;
-  outline: none;
   border: 2px solid #fff;
   border-radius: 50%;
+  outline: none;
   color: #fff;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  opacity: .3;
+  opacity: 0.3;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: .4s;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
 }
 .awards .swiper-prev {
   left: -100px;
@@ -800,87 +512,7 @@ header .badges .badge {
   color: #333;
 }
 
-
-/*FOOTER*/
-footer {
-  background-color: #272727;
-  border-top: 1px solid #333;
-}
-footer .inner {
-  padding: 40px 0 60px 0;
-}
-footer .menu {
-  display: flex;
-  justify-content: center;
-}
-footer .menu li {
-  position: relative;
-}
-footer .menu li::before {
-  content: "";
-  width: 3px;
-  height: 3px;
-  background-color: #555;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: -1px;
-  margin: auto;
-}
-footer .menu li:last-child::before {
-  display: none;
-}
-footer .menu li a {
-  display: block;
-  color: #CCC;
-  font-size: 12px;
-  font-weight: 700;
-  padding: 15px;
-}
-footer .menu li a.green {
-  color: #669900;
-}
-footer .btn-group {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-}
-footer .btn-group .btn {
-  font-size: 12px;
-  margin-right: 10px;
-}
-footer .btn-group .btn:last-child {
-  margin-right: 0;
-}
-footer .info {
-  margin-top: 30px;
-  text-align: center;
-}
-footer .info span {
-  margin-right: 20px;
-  color: #999;
-  font-size: 12px;
-}
-footer .info span:last-child {
-  margin-right: 0;
-}
-footer .copyright {
-  color: #999;
-  font-size: 12px;
-  text-align: center;
-  margin-top: 12px;
-}
-footer .logo {
-  margin: 30px auto 0;
-}
-
-
-/*SCROLL TO TOP*/
 #to-top {
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  z-index: 9;
   width: 42px;
   height: 42px;
   background-color: #333;
@@ -891,4 +523,8 @@ footer .logo {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
 }
